fixed mystery gap on bottom of fixedsize windows

--- a/css/style.css
+++ b/css/style.css
@@ -61,4 +61,5 @@ iframe {
 	height: 480px;
 	box-sizing: border-box;
 	border: 0px solid black;
+	display: block;
 }
